test/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-assessment
  labels:
    name: k8s-assessment
